--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         }
 
         .mainGradient {
-            background: linear-gradient(to top, #ffffff, #f5f5f5, yellow);
+            background: linear-gradient(to top, #ffffff, #f5f5f5, #ffc107);
             text-align: center;
         }
 
         .footerGradient {
-            background-image: linear-gradient(to bottom, #ffffff, #f5f5f5, yellow);
+            background-image: linear-gradient(to bottom, #ffffff, #f5f5f5, #ffc107);
         }
 
         nav ul {
@@ -49,30 +49,164 @@
     </style>
 </head>
 <body>
-
 <header>
-    <div class="d-flex flex-column fixed-top">
-        <div class=" jumbotron d-none d-md-block mainGradient">
-            <h1 class="display-4 ">Ana Lourenço</h1>
-            <p class="lead">I'm a polymath turned developer through a calculated risk, and code has become both my craft
-                and
-                also my
-                passion for building something with my knowledge and leaving my <b>mark</b> in the world. I'm saving the
-                world, one line of code at a time!</p>
-        </div>
-        <div class=" d-md-none d-sm-block mainGradient">
-            <h1>Ana Lourenço</h1>
-            <p class="d-none d-sm-block"> I'm a polymath turned developer through a calculated risk, and code has become
-                both my craft and
-                also my
-                passion for building something with my knowledge and leaving my <b>mark</b> in the world. I'm saving the
-                world, one line of code at a time!</p>
+    <div class="container-fluid">
+        <div class="row text-center">
+            <div class=" d-none d-md-block mainGradient">
+                <h1 class="display-4 ">Ana Lourenço</h1>
+                <p class="lead">I'm a polymath turned developer through a calculated risk, and code has become both my
+                    craft
+                    and
+                    also my
+                    passion for building something with my knowledge and leaving my <b>mark</b> in the world. I'm saving
+                    the
+                    world, one line of code at a time!</p>
+            </div>
+            <div class=" d-md-none d-sm-block mainGradient">
+                <h1>Ana Lourenço</h1>
+                <p> I'm a polymath turned developer through a calculated risk, and code has
+                    become
+                    both my craft and
+                    also my
+                    passion for building something with my knowledge and leaving my <b>mark</b> in the world. I'm saving
+                    the
+                    world, one line of code at a time!</p>
+            </div>
         </div>
     </div>
 </header>
+<section id="contenu">
 
+    <!--Accordion wrapper-->
+    <div class="accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
 
-<footer class="">
+        <!-- Accordion card -->
+        <div class="card ">
+
+            <!-- Card header -->
+            <div class="card-header bg-info text-white" role="tab" id="headingFour1">
+                <a data-toggle="collapse" data-parent="#accordionEx" href="#collapseFour4" aria-expanded="false"
+                   aria-controls="collapseFour1">
+                    <h5 class="mb-0 bg-ingo text-white">
+                        Experience - Latest Project<i class="fas fa-angle-down rotate-icon"></i>
+                    </h5>
+                </a>
+            </div>
+
+            <!-- Card body -->
+            <div id="collapseFour1" class="collapse text-info bg-white" role="tabpanel" aria-labelledby="headingFour1"
+                 data-parent="#accordionEx">
+                <div class="card-body">
+                    <h6><b>Novabase // STEF-IT - Team SOA</b></h6>
+                    <p>Working as an outsourced consultant for Affinity SA, in Novabase, at a nearshore project for the
+                        French company STEF - IT. This company integrated the group STEF, which is specialized in cold
+                        chain transportation and logistics all throughout Europe.
+                    </p>
+                    <p>
+                        My responsibilities have been to participate in the corrective maintenance and bug fixing and
+                        contacting directly with the team abroad to discuss either functional or technical aspects of
+                        platform.
+                    </p>
+                    <p>
+                        I've gotten the opportunity as well, since this is a personal area of interest, to colaborate
+                        with another team within this project in the conception of a learning application for STEF IT,
+                        focusing in the evaluation of its usability and user experience.
+                    </p>
+                    <p>
+                        Main technological stack- Java; Spring FW; Mybatis; Maven, SQL, SVN, GIT, Apache Tomcat, REST
+                        architecture, Jenkins + SonarQube; GWT; HTML; CSS; User Experience.
+                    </p>
+                </div>
+            </div>
+
+        </div>
+        <!-- Accordion card -->
+
+        <!-- Accordion card FEITO-->
+        <div class="card">
+
+            <!-- Card header -->
+
+            <div class="card-header bg-warning text-white" role="tab" id="headingTwo2">
+                <a data-toggle="collapse" data-parent="#accordionEx" href="#collapseTwo2" aria-expanded="false"
+                   aria-controls="collapseTwo2">
+                    <h5 class="mb-0 bg-warning text-white">
+                        Skills<i class="fas fa-angle-down rotate-icon"></i>
+                    </h5>
+                </a>
+            </div>
+
+            <!-- Card body -->
+            <div id="collapseTwo2" class="collapse text-info bg-white" role="tabpanel" aria-labelledby="headingTwo2"
+                 data-parent="#accordionEx">
+                <div class="card-body">
+                    <img src="resources/wordcloud.png" alt="cloud of skills">
+                </div>
+            </div>
+
+        </div>
+        <!-- Accordion card FEITO-->
+
+        <!-- Accordion card -->
+        <div class="card">
+
+            <!-- Card header -->
+            <div class="bg-sucess text-white " role="tab" id="headingThree3">
+                <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseThree3"
+                   aria-expanded="false" aria-controls="collapseThree3">
+                    <h5 class="mb-0">
+                        Education<i class="fas fa-angle-down rotate-icon"></i>
+                    </h5>
+                </a>
+            </div>
+
+            <!-- Card body -->
+            <div id="collapseThree3" class="collapse text-info bg-white" role="tabpanel" aria-labelledby="headingThree3"
+                 data-parent="#accordionEx">
+                <div class="card-body">
+                    <ul>
+                        <li> Intensive Bootcamp Java & JavaScript - <​Academia de Código_></li>
+                        <li> Bachelor Degree in Accountancy and Business Administration - Instituto Politécnico de
+                            Lisboa - ISCAL
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+        <!-- Accordion card -->
+
+        <!-- Accordion card -->
+        <div class="card">
+
+            <!-- Card header -->
+            <div class="card-header bg-info text-white" role="tab" id="headingFour4">
+                <a data-toggle="collapse" data-parent="#accordionEx" href="#collapseFour4" aria-expanded="false"
+                   aria-controls="collapseFour4">
+                    <h5 class="mb-0">
+                        Languages<i class="fas fa-angle-down rotate-icon"></i>
+                    </h5>
+                </a>
+            </div>
+
+            <!-- Card body -->
+            <div id="collapseFour4" class="collapse text-info bg-white" role="tabpanel" aria-labelledby="headingFour4"
+                 data-parent="#accordionEx">
+                <div class="card-body">
+                    <ul>
+                        <li>Portugais</li>
+                        <li>Anglais</li>
+                        <li>Français</li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+        <!-- Accordion card -->
+
+    </div>
+</section>
+<footer>
     <!-- this footer needs the same type of responsiveness as the header -->
     <div class="d-flex fixed-bottom customFooter footerGradient">
         <span class="text-muted mr-auto m-1">powered by caffeine and B B King</span>
@@ -91,5 +225,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+
+
 </body>
 </html>
