Ajouter une photo

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
   <div class="container-fluid">
     <div class="row text-center">
       <div class=" d-none d-md-block mainGradient">
+        <img style="-webkit-filter: grayscale(100%);filter: grayscale(100%);height: 200px;" class="rounded-circle mt-2" src="resources/photo.png" alt="portrait picture">
         <h1 class="display-2  mt-3">Ana Lourenço</h1>
         <p class="lead">I'm a polymath turned developer through a calculated risk, and code has become both my
           craft
