Ajouter une photo

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           become
           both my craft and
           also my
-          passion for building something with my knowledge and leaving my <b>mark</b> in the world. I'm saving
+          passion for building something with my knowledge and leaving my mark in the world. I'm saving
           the
           world, one line of code at a time!</p>
       </div>
