initial content and initial ui revamp

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <title>Ana Lourenço</title>
 </head>
 
-<body >
+<body>
 
-  <header class="valign-wrapper center-align itemcard container">
+  <header class="valign-wrapper center-align itemcard container red-text accent-2">
     <div class="">
-      <img class="circle" src="assets/photo.png" />
+      <img class="circle" src="assets/profile_picture.jpg" />
       <h1>Ana Lourenço</h1>
       <p> I'm a polymath turned developer through a calculated risk, and code has
         become
@@ -35,39 +35,125 @@
 
   <div id="pc">
 
-      <nav class="pushpin-demo-nav" data-target="pc">
-          <div class="nav-wrapper ">
-            <a href="#" class="brand-logo">Logo</a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-              <li><a href="#footer">Sass</a></li>
-              <li><a href="badges.html">Components</a></li>
-              <li><a href="collapsible.html">JavaScript</a></li>
-            </ul>
-          </div>
-        </nav>
+    <nav class="pushpin-demo-nav" data-target="pc">
+      <div class="nav-wrapper ">
+        <!-- <a href="#" class="brand-logo">Logo</a> -->
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="#cv">CV</a></li>
+          <li><a href="#gallery">Gallery</a></li>
+          <li><a href="#blog">Blog</a></li>
+        </ul>
+      </div>
+    </nav>
 
-  <div class="parallax-container">
-    <div class="parallax"><img src="assets/dawid-zawila-279998-unsplash.jpg" /></div>
-  </div>
-  <div class="section white">
-    <div class="row container">
-      <h2 class="header">Parallax</h2>
-      <p class="grey-text text-darken-3 lighten-3">Parallax is an effect where the background content or image in this
-        case, is moved at a different speed than the foreground content while scrolling.</p>
+    <div class="parallax-container">
+      <div class="parallax"><img src="assets/parallax_background1.jpg" /></div>
+    </div>
+    <div class="section white">
+      <div class="row container">
+        <h2 id="cv" class="header">CV</h2>
+        <h4>Working Experience</h4>
+        <div class="">
+          <h5>Aubay Nearshore Team // STEF-IT - Team TMS</b></h5>2019-ongoing
+          <p>I'm currently a part of STEF-IT's nearshore at Aubay Portugal's headquarters in Lisbon as a fullstack
+            developer for the TMS team.
+            <p>
+              <strong>Main technological stack- Java; Apache Struts; MVCPortlets; Liferay; Ant; Maven, SQL, SVN, GIT,
+                Apache Tomcat, REST
+                architecture, HTML; CSS; JavaScript, jQuery, React.js, User Experience.
+              </strong></p>
+        </div>
+        <div class="">
+          <h5>Novabase // STEF-IT - Team SOA</b></h5> 2018-2019
+          <p>Working as an outsourced consultant for Affinity SA, in Novabase, at a nearshore project for the
+            French company STEF - IT. This company integrated the group STEF, which is specialized in cold
+            chain transportation and logistics all throughout Europe.</p>
+          <p>My responsibilities have been to participate in the corrective maintenance and bug fixing and
+            contacting directly with the team abroad to discuss either functional or technical aspects of
+            platform.</p>
+          <p>I've gotten the opportunity as well, since this is a personal area of interest, to colaborate
+            with another team within this project in the conception of a learning application for STEF IT,
+            focusing in the evaluation of its usability and user experience.</p>
+          <p><b>
+              Main technological stack- Java; Spring FW; Mybatis; Maven, SQL, SVN, GIT, Apache Tomcat, REST
+              architecture, Jenkins + SonarQube; GWT; HTML; CSS; User Experience.
+            </b></p>
+          <br>
+          <i>more details can be seen in my <a href="http://www.visualcv.com/aflourenco" target="_blank">CV @
+              VisualCV</a></i>
+        </div>
+
+
+      </div>
+    </div>
+    <div class="parallax-container">
+      <div class="parallax"><img src="assets/parallax_background2.jpg" /></div>
+    </div>
+    <div class="section white">
+      <div class="row container">
+        <h2 class="header">Gallery</h2>
+            <div class="container">
+              <div class="row">
+                <div class="col s12 m6 l4"><img src="https://via.placeholder.com/300x300.png" alt=""></div>
+                <div class="col s12 m6 l4"><img src="https://via.placeholder.com/300x300.png" alt=""></div>
+                <div class="col s12 m6 l4"><img src="https://via.placeholder.com/300x300.png" alt=""></div>
+                <div class="col s12 m6 l4"><img src="https://via.placeholder.com/300x300.png" alt=""></div>
+                <div class="col s12 m6 l4"><img src="https://via.placeholder.com/300x300.png" alt=""></div>
+                <div class="col s12 m6 l4"><img src="https://via.placeholder.com/300x300.png" alt=""></div>
+                <div class="col s12 m6 l4"><img src="https://via.placeholder.com/300x300.png" alt=""></div>
+                <div class="col s12 m6 l4"><img src="https://via.placeholder.com/300x300.png" alt=""></div>
+                <div class="col s12 m6 l4"><img src="https://via.placeholder.com/300x300.png" alt=""></div>
+                <div class="col s12 m6 l4"><img src="https://via.placeholder.com/300x300.png" alt=""></div>
+                <div class="col s12 m6 l4"><img src="https://via.placeholder.com/300x300.png" alt=""></div>
+                <div class="col s12 m6 l4"><img src="https://via.placeholder.com/300x300.png" alt=""></div>
+              </div>
+            </div>
+
+      </div>
+    </div>
+    <div class="parallax-container">
+      <div class="parallax"><img src="assets/parallax_background3.jpg" /></div>
+    </div>
+    <div class="section white">
+      <div class="row container">
+        <h2 class="header">Blog</h2>
+        <p>Captain's log #001 - A week in Javaland - Send help!</p>
+        <p>Captain's log #002 - A week in Javaland - Crew almost eaten by NullPointerExceptions - Send help!</p>
+        <p>Captain's log #003 - A week in Javaland - The Promise Faction deployed counter measures when the crew
+          member's number got down to five. We were saved! System.out.println to everyone, we were saved!</p>
+
+      </div>
+    </div>
+    <div class="parallax-container">
+      <div class="parallax"><img src="assets/parallax_background4.jpg" /></div>
     </div>
   </div>
-  <div class="parallax-container">
-    <div class="parallax"><img src="assets/dawid-zawila-279998-unsplash.jpg" /></div>
-  </div>
-</div>
 
-  <footer id="footer">
-    <div class="m-1"><a href="http://www.visualcv.com/aflourenco" target="_blank"> CV </a></div>
-    <div class="m-1"><a href="http://www.linkedin.com/in/aflourenco" target="_blank"> Linkedin </a></div>
-    <div class="m-1"><a href="https://github.com/analisboeta"> GitHub </a></div>
-    <div class="m-1"><a href="https://www.instagram.com/analisboeta"> Instagram </a></div>
+  <footer class="page-footer black">
+    <div class="container">
+      <div class="row">
+        <div class="col l12 s12">
+          <h5 class="white-text">Links</h5>
+          <ul>
+
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+        © 2014 Copyright Text
+        <a class="grey-text text-lighten-4 right" href="http://www.visualcv.com/aflourenco" target="_blank"> CV</a>
+        <a class="grey-text text-lighten-4 right" href="http://www.linkedin.com/in/aflourenco"
+          target="_blank">LinkedIn</a>
+        <a class="grey-text text-lighten-4 right" href="https://github.com/analisboeta" target="_blank">GitHub</a>
+        <a class="grey-text text-lighten-4 right" href="https://www.instagram.com/analisboeta"
+          target="_blank">Instagram</a>
+      </div>
     </div>
   </footer>
+
+
   <!-- Compiled and minified JavaScript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
