--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Compiled and minified CSS -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" href="visual/screenhome/index.css">
 
@@ -92,20 +93,8 @@
       <div class="row container">
         <h2 class="header">Gallery</h2>
             <div class="container">
-              <div class="row">
-                <div class="col s12 m6 l4"><img src="https://via.placeholder.com/300x300.png" alt=""></div>
-                <div class="col s12 m6 l4"><img src="https://via.placeholder.com/300x300.png" alt=""></div>
-                <div class="col s12 m6 l4"><img src="https://via.placeholder.com/300x300.png" alt=""></div>
-                <div class="col s12 m6 l4"><img src="https://via.placeholder.com/300x300.png" alt=""></div>
-                <div class="col s12 m6 l4"><img src="https://via.placeholder.com/300x300.png" alt=""></div>
-                <div class="col s12 m6 l4"><img src="https://via.placeholder.com/300x300.png" alt=""></div>
-                <div class="col s12 m6 l4"><img src="https://via.placeholder.com/300x300.png" alt=""></div>
-                <div class="col s12 m6 l4"><img src="https://via.placeholder.com/300x300.png" alt=""></div>
-                <div class="col s12 m6 l4"><img src="https://via.placeholder.com/300x300.png" alt=""></div>
-                <div class="col s12 m6 l4"><img src="https://via.placeholder.com/300x300.png" alt=""></div>
-                <div class="col s12 m6 l4"><img src="https://via.placeholder.com/300x300.png" alt=""></div>
-                <div class="col s12 m6 l4"><img src="https://via.placeholder.com/300x300.png" alt=""></div>
-              </div>
+              <div id="gallery" class="row">
+                </div>
             </div>
 
       </div>
@@ -156,6 +145,7 @@
   <!-- Compiled and minified JavaScript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="visual/screenhome/index.js"></script>
 </body>
 
